default.css
:root{
    --mainColor: #6f8704;
    --secColor: #eaeaea;

    --borderColor: #c1c1c1;

    --mainText: black;
}

html, body{
    padding: 0;
    margin: 0;
    overflow-x: hidden;
}

h1, h2, h3, h4, h5, h6, strong{
    color: var(--mainText);
    font-family: 'Poppins', sans-serif;
    font-weight: 500;
}

p, li, span, label, input, textarea{
    color: var(--mainText);
    font-family: 'Montserrat', sans-serif;
}

h1 {font-size: 56px;}
h2 {font-size: 36px;}
h3 {font-size: 28px;}
h4 {font-size: 24px;}
h5 {font-size: 20px;}
h6 {font-size: 16px;}

nav{
    position: sticky;
    top: 0;
    display: flex;
    justify-content: space-around;
    align-items: center;
    min-height: 8vh;
    background-color: var(--mainColor);
    z-index: 1;
}

.logo{
    color: var(--mainColor);
    text-transform: uppercase;
    letter-spacing: 5px;
}

.nav-links{
    display: flex;
    justify-content: space-around;
    width: 35%;
}

.nav-links a{
    color: var(--mainText);
    text-decoration: none;
    letter-spacing: 3px;
    font-weight: bold;
    font-size: 14px;
}

.nav-links li{
    list-style: none;
}

.burger{
    display: none;
    cursor: pointer;
}

.burger div{
    width: 25px;
    height: 3px;
    background-color: var(--mainText);
    margin: 5px;
    transition: all 0.3s ease;
}

.main-container{
    width: 1200px;
    margin: 0 auto;
    min-height: calc(100vh - 50px);
}

.greeting-wrapper{
    display: grid;
    text-align: center;
    align-content: center;
    min-height: 10em;
}

#lw_pic {
    display: block;
    margin: 20px auto;
    height: 200px;
    width: 90%;
    object-fit: contain;
}

#ft_pic {
    display: block;
    margin: 20px auto;
    height: 400px;
    width: 90%;
    object-fit: contain;
}

.about-lw{
    display: grid;
    text-align: center;
    align-content: center;
    min-height: 10em;
}

.schedule{
    display: grid;
    text-align: center;
    align-content: center;
    min-height: 10em;
    margin-bottom: 4vh;
    border-top: 1px solid var(--borderColor);
}

.schedule h5{
    margin-bottom: 20px;
}

.schedule p{
    margin: 0 auto;
    border-bottom: 1px solid var(--borderColor);
}

.story-lw{
    margin: 0 auto;
    display: grid;
    text-align: center;
    align-content: center;
    min-height: 10em;
    width: 60%;
}

.story-lw p{
    text-align: left;
}

.media-lw{
    margin: 0 auto;
    display: grid;
    text-align: center;
    align-content: center;
    min-height: 10em;
    width: 60%;
    margin-bottom: 50px;
}

iframe {
    margin: 0 auto;
    width: 100%;
}

.menu-lw{
    margin: 0 auto;
    display: grid;
    text-align: center;
    align-content: center;
    min-height: 10em;
    width: 80%;
}

.menu-lw p{
    text-align: left;
}

.menu-row{
    display: flex;
    margin-bottom: 20px;
}

.column{
    flex: 33.33%;
    padding: 5px;
}

.caption{
    color: var(--mainText);
    font-family: 'Poppins', sans-serif;
    font-weight: 500;
    font-size: 20px;
}

#menu_pic{
    display: block;
    margin: 20px auto;
    height: 200px;
    width: 90%;
    object-fit: contain;
}

.google-maps{
    margin: 0 auto;
    display: grid;
    text-align: center;
    align-content: center;
    min-height: 10em;
    width: 70%;
    margin-bottom: 50px;
}

#gmaps{
    width: 75%;
}

footer{
    width: 100%;
    bottom: 0;
    display: block;
    justify-content: space-around;
    align-items: flex-end;
    min-height: 10vh;
    background-color: var(--mainColor);
}

footer p{
    margin: 2.5px auto;
}

.footer-social-links{
    font-size: 14px;
    text-align: center;
}
.footer-social-links a{
    width: 25px;
    height: 25px;
    line-height: 25px !important;
    position: relative;
    margin: 10px 10px;
    text-align: center;
    display: inline-block;
    color: black;
    
    -webkit-transition: all 0.27s cubic-bezier(0.300, 0.100, 0.580, 1.000);  
    -moz-transition: all 0.27s cubic-bezier(0.300, 0.100, 0.580, 1.000); 
    -o-transition: all 0.27s cubic-bezier(0.300, 0.100, 0.580, 1.000);
    -ms-transition: all 0.27s cubic-bezier(0.300, 0.100, 0.580, 1.000); 
    transition: all 0.27s cubic-bezier(0.300, 0.100, 0.580, 1.000);
}
.footer-social-links a i,
.footer-social-links a span{
    position: relative;
    top: 2px;
    left: 1px;
}
.footer-social-links a:before{
    content: "";
    display: inline-block;
    width: 100%;
    height: 100%;
    position: absolute;
    top: 0;
    left: 0;
    border: 1px solid black;
    
    -webkit-border-radius: 2px;
    -moz-border-radius: 2px;
    border-radius: 2px;
    
    -webkit-transform: rotate(45deg);
    -moz-transform: rotate(45deg);
    -o-transform: rotate(45deg);
    -ms-transform: rotate(45deg);
    transform: rotate(45deg);
    
    -webkit-transition: all 0.27s cubic-bezier(0.300, 0.100, 0.580, 1.000);  
    -moz-transition: all 0.27s cubic-bezier(0.300, 0.100, 0.580, 1.000); 
    -o-transition: all 0.27s cubic-bezier(0.300, 0.100, 0.580, 1.000);
    -ms-transition: all 0.27s cubic-bezier(0.300, 0.100, 0.580, 1.000); 
    transition: all 0.27s cubic-bezier(0.300, 0.100, 0.580, 1.000);
    
}
.footer-social-links a:hover{
    color: #fff;
}
.footer-social-links a:hover:before{
    background: black;
}

/* Between PC and mobile, maybe tablets? */
@media screen and (max-width: 1024px){
    .nav-links{
        width: 60%;
    }
}

/* For mobile users */
@media screen and (max-width: 768px){
    body{
        overflow-x: hidden;
    }
    .nav-links{
        position: absolute;
        right: 0px;
        height: 92vh;
        top: 8vh;
        background-color: var(--mainColor);
        display: flex;
        flex-direction: column;
        align-items: center;
        width: 40%;
        transform: translateX(100%);
        transition: transform 0.5s ease-in;
    }

    .nav-links li{
        opacity: 0;
    }

    .burger{
        display: block;
    }

    #lw_pic {
        display: block;
        margin: 0 auto;
        height: 200px;
        width: 90%;
        object-fit: contain;
        margin-bottom: -100px;
    }

    #ft_pic {
        display: block;
        margin: 0 auto;
        margin-bottom: -20px;
        margin-top: -20px;
        height: 400px;
        width: 110%;
        object-fit: contain;
    }

    .menu-row{
        display: inline;
    }

    iframe {
        margin: 0 auto;
        width: 100%;
        height: 200px;
    }

    .google-maps{
        width: 100%;
    }

    footer{
        min-height: 14vh;
    }
}

.nav-active{
    transform: translateX(0%);
}

.toggle .line1{
    transform: rotate(-45deg) translate(-5px,6px);
}

.toggle .line2{
    opacity: 0;
}

.toggle .line3{
    transform: rotate(45deg) translate(-5px,-6px);
}

@keyframes navLinkFade{
    from{
        opacity: 0;
        transform: translateX(50px);
    }
    to{
        opacity: 1;
        transform: translateX(0px);
    }
}

@media screen and (max-width: 1200px){
    .main-container{
        width: 95%;
    }
}

